--- a/css/estilo.css
+++ b/css/estilo.css
@@ -26,11 +26,46 @@ header {
 
     aside.sobremi {
       float: left;
-      width: 20%;
+      width: 15%;
       padding: 10px;
+      margin-right: 30px;
     }
-    section.recetas img {
-      width: 60%;
-      height: 60%;
-      object-fit: contain;
-    }
+    .recetas1 {
+  text-align: center;
+  width: 33%;
+  display: inline-block;
+  margin-right: 20px;
+
+}
+
+.receta2 {
+  text-align: center;
+  width: 33%;
+  display: inline-block;
+  margin-right: 30px;
+  float: right;
+}
+ .recetas3 {
+  text-align: center;
+  width: 33%;
+  display: inline-block;
+  margin-right: 20px;
+
+}
+
+.recetas4 {
+  text-align: center;
+  width: 32%;
+  display: inline-block;
+  margin-right: 30px;
+  float: right;
+}
+
+h2 {
+  font-size: 14px;
+}
+
+img {
+  max-width: 100%;
+}
+
