--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,7 +6,7 @@ header {
       list-style: none;
       display: flex;
       justify-content: center;
-      margin:0;
+      margin:1;
       padding: 0;
       position: relative;
       z-index: 1;
@@ -21,20 +21,21 @@ header {
       color: #333;
     }
     .menu a:hover {
-      color: green;
+      color: #7ABA96;
     }
 
     aside.sobremi {
       float: left;
       width: 15%;
       padding: 10px;
-      margin-right: 30px;
+      margin-right: 40px;
+      font-size: 16px;
     }
     .recetas1 {
   text-align: center;
-  width: 33%;
+  width: 30%;
   display: inline-block;
-  margin-right: 20px;
+  margin-left: 20px;
 
 }
 
@@ -57,12 +58,28 @@ header {
   text-align: center;
   width: 32%;
   display: inline-block;
-  margin-right: 30px;
+  margin-right: 40px;
   float: right;
 }
 
 h2 {
-  font-size: 14px;
+  font-size: 17px;
+}
+h1{
+font-size: 10px;
+}
+#hr2,#hr1 {
+   border-color: #7ABA96;
+}
+.sobremi{
+font-size: 22px;
+text-align: center;
+}
+.menu{
+font-size: 18px;
+}
+.fecha{
+margin-bottom: 0;
 }
 
 img {
