--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,16 @@
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  margin: 0;
+  min-height: 100%;
+  padding-bottom: 6.74rem;
+  box-sizing: inherit;
+}
+
 header {
       text-align: center;
       padding: 50px 0;
@@ -85,5 +98,39 @@ margin-bottom: 0;
 
 img {
   max-width: 100%;
+}
+
+.footer {
+  padding: 35px 0;
+  background-color: #000000;
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+.footer ul {
+  margin-top: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.footer ul li a {
+  color: white;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer ul li {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.footer ul li a:hover {
+  opacity: 1;
 }
 
