--- a/css/estilo.css
+++ b/css/estilo.css
@@ -103,7 +103,7 @@ img {
 .footer {
   padding: 35px 0;
   background-color: #000000;
-  position: fixed;
+  position: absolute;
   right: 0;
   left: 0;
   bottom: 0;
