--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,6 +9,7 @@ body {
   min-height: 100%;
   padding-bottom: 6.74rem;
   box-sizing: inherit;
+
 }
 
 header {
@@ -69,10 +70,12 @@ header {
 }
 
 .recetas4 {
+  position: absolute;
+  top: 200px;
   text-align: center;
   width: 32%;
   display: inline-block;
-  margin-right: 220px;
+  margin-right: 0px;
   float: right;
 }
 
@@ -101,6 +104,7 @@ img {
 }
 
 .footer {
+  position: absolute;
   padding: 35px 0;
   background-color: #000000;
   position: absolute;
