--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,9 @@
 html {
   height: 100%;
   box-sizing: border-box;
-  
+  margin: 0;
+  padding: 0;
+  flex: 0 0 auto;
 }
 
 body {
@@ -10,7 +12,7 @@ body {
   min-height: 100%;
   padding-bottom: 6.74rem;
   box-sizing: inherit;
-
+  flex: 1 0 auto;
 }
 
 header {
@@ -105,42 +107,13 @@ img {
   max-width: 100%;
 }
 
-
-
-footer{
+footer {
   position: fixed;
-  padding: 35px 0;
-  background-color: #000000;
-  right: 0;
-  left: 0;
   bottom: 0;
+  left: 0;
+  right: 0;
+  flex: 0 0 auto;
 }
-
-.footer ul {
-  margin-top: 0;
-  padding: 0;
-  list-style: none;
-  font-size: 18px;
-  line-height: 1.6;
-  margin-bottom: 0;
-  text-align: center;
-}
-
-.footer ul li a {
-  color: white;
-  text-decoration: none;
-  opacity: 0.8;
-}
-
-.footer ul li {
-  display: inline-block;
-  padding: 0 15px;
-}
-
-.footer ul li a:hover {
-  opacity: 1;
-}
-
 
 
 
