--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,7 +7,6 @@ html {
 }
 
 body {
-  
   margin: 0;
   min-height: 100%;
   padding-bottom: 6.74rem;
@@ -16,104 +15,142 @@ body {
 }
 
 header {
-      text-align: center;
-      padding: 50px 0;
-    }
-    .menu {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      margin:1;
-      padding: 0;
-      position: relative;
-      z-index: 1;
-    }
-
-    .menu li {
-      margin: 0 10px;
-    }
-
-    .menu a {
-      text-decoration: none;
-      color: #333;
-    }
-    .menu a:hover {
-      color: #7ABA96;
-    }
-
-    aside.sobremi {
-      float: left;
-      width: 15%;
-      padding: 10px;
-      margin-right: 40px;
-      font-size: 16px;
-      text-align: justify;
-    }
-    .recetas1 {
   text-align: center;
-  width: 30%;
-  display: inline-block;
-  margin-left: 20px;
+  padding: 50px 0;
+}
 
+.menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin:1;
+  padding: 0;
+  position: relative;
+  z-index: 1;
+}
+
+.menu a:hover{
+  color: #7ABA96;
+}
+
+.menu li {
+  margin: 0 10px;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #333;
+}
+
+aside.sobremi {
+  float: left;
+  width: 15%;
+  padding: 10px;
+  margin-right: 40px;
+  font-size: 16px;
+  text-align: justify;
+  margin-left: 150px;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+#recetas1{
+  display: inline-block;
+
+}
+#recetas2{
+  display: inline-block;
+  top: 200px;
+}
+
+.receta1 {
+  float: right;
+  margin-right: 10vw;
+  text-align: center;
+  width: 25%;
+}
+
+.receta3 {
+  float: right;
+  margin-right: 10vw;
+  text-align: center;
+  width: 25%;
 }
 
 .receta2 {
-  text-align: center;
-  width: 33%;
-  display: inline-block;
-  margin-right: 30px;
   float: right;
-}
- .recetas3 {
+  margin-right: 10vw;
   text-align: center;
-  float:right;
-  width: 33%;
-  display: inline-block;
-  margin-right: 26px;
-
+  width: 25%;
 }
 
-.recetas4 {
-  position: absolute;
-  top: 200px;
-  text-align: center;
-  width: 32%;
-  display: inline-block;
-  margin-right: 0px;
+.receta4 {
   float: right;
+  margin-right: 10vw;
+  text-align: center;
+  width: 25%;
 }
+
+#foto {
+  object-fit: contain;
+  width:100%;
+  height:100%;
+}
+
+#hr1,#hr2,#hr3,#hr4 {
+  border-color: #7ABA96;
+}
+
+#texto1,#texto2,#texto3,#texto4 {
+  text-align: justify;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+}
+
+.fecha{
+  font-size: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+}
+
+#titulo1,#titulo2,#titulo3,#titulo4 {
+  color: rgb(0, 0, 0); 
+  text-decoration: none;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
 
 h2 {
   font-size: 17px;
 }
+
 h1{
-font-size: 11px;
-}
-#hr2,#hr1 {
-   border-color: #7ABA96;
-}
-.sobremi{
-font-size: 22px;
-text-align: center;
-}
-.menu{
-font-size: 18px;
-}
-.fecha{
-margin-bottom: 0;
+  font-size: 11px;
 }
 
-img {
-  max-width: 100%;
+.sobremi{
+  font-size: 22px;
+  text-align: center;
+}
+
+.menu{
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 footer {
-  position: fixed;
+  margin-bottom: 0vm;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  padding: 20px 0;
+  position: static;
   bottom: 0;
-  left: 0;
-  right: 0;
-  flex: 0 0 auto;
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-
-
