--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,6 +12,7 @@ body {
   padding-bottom: 6.74rem;
   box-sizing: inherit;
   flex: 1 0 auto;
+ 
 }
 
 header {
@@ -65,29 +66,32 @@ aside.sobremi {
 .receta1 {
   float: right;
   margin-right: 10vw;
+  bottom: 10vw;
   text-align: center;
-  width: 25%;
+  width: 23%;
 }
 
 .receta3 {
-  float: right;
-  margin-right: 10vw;
+  float:left ;
+  margin-left: 34vw;
   text-align: center;
-  width: 25%;
+  width: 23%;
 }
 
 .receta2 {
   float: right;
   margin-right: 10vw;
+  margin-bottom: 25px;
   text-align: center;
-  width: 25%;
+  width: 23%;
 }
 
 .receta4 {
   float: right;
-  margin-right: 9vw;
+  margin-right: 10vw;
+  margin-bottom: 5vw;
   text-align: center;
-  width: 25%;
+  width: 23%;
 }
 
 #foto {
@@ -101,10 +105,12 @@ aside.sobremi {
 }
 
 #texto1,#texto2,#texto3,#texto4 {
-  text-align: justify;
-  font-size: 18px;
+  font-size: 17px;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
+}
+#texto1{
+  margin-bottom: 1px;
 }
 
 .fecha{
