--- a/css/estilo.css
+++ b/css/estilo.css
@@ -147,6 +147,18 @@ h1{
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.anuncio {
+  background-color: yellow;
+  float:left;
+  margin-left: 8vw;
+  color: black;
+  font-size: 24px;
+  padding: 10px;
+  border: 2px solid black;
+}
+
+
+
 footer {
   margin-bottom: 0vm;
   background-color: black;
