--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,17 +5,10 @@
   font-family: Arial;
 }
 
-#logo-div {
-  width: 100%;
-  min-height: 50px;
-  padding-left: 2%;
-  line-height: 50px;
-  margin-bottom: 10px;
-}
-
 #logo-div img {
   display:block; 
   margin:auto;
+  margin-bottom: 10px;
 }
 
 #nav-div {
@@ -90,7 +83,7 @@
   line-height: 17px;
   margin-top: 30px;
   margin-left: 18px;
-  background-color: lightgrey;
+  background-color: #ececec;
 }
 
 #anuncio-section h1 {
@@ -121,7 +114,7 @@
   width: 100%;
   min-height: 20px;
   float: left;
-  background-color: green;
+  background-color: #7ABA96;
   line-height: 20px;
   margin-top: 15px;
   bottom:20px
