--- a/listado/listado.css
+++ b/listado/listado.css
@@ -1,4 +1,3 @@
-
 #listarecetas {
     justify-content: center;
     padding-left: 20vw;
@@ -29,22 +28,30 @@
     
 }
 
-
+h2 a:hover {
+    color: lightgrey;
+  
+  }
 
 h1 {
     font-size: 25px;
     text-align: left;
+   
 }
 
-h2 {
+h2 a{
     font-size: 20px;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
 }
 
 h3 {
-    font-size: 15px;  
+    font-size: 15px;
+   
 }
 
 h4 {
     font-size: 10px;
+   
 }
 
