--- a/listado/receta/css/receta.css
+++ b/listado/receta/css/receta.css
@@ -41,7 +41,8 @@ h1 {
     margin: 5px;
 }
 h2 {
-    margin-bottom: 5px;  
+    margin-bottom: 5px;
+    font-size: medium;
 }
 h3 {
     margin-bottom: 5px;
